Fix hr on mobile

--- a/src/css/blog.scss
+++ b/src/css/blog.scss
@@ -87,6 +87,7 @@
                 border: none;
                 margin-top: 2em;
                 margin-bottom: 3em;
+                width: auto;
             }
 
             @media (max-width: $width-container) {
@@ -190,7 +191,7 @@ article.blog {
     }
 
     @media (max-width: $width-container) {
-        > *:not(pre):not(blockquote) {
+        > *:not(pre):not(blockquote):not(hr) {
             margin-left: 1.5rem;
             margin-right: 1.5rem;
         }
